# Datamorph

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  RELEASE.md  TECHNICAL.md  USAGE.md
release/: datamorph-linux-amd64
scripts/: build-release.sh  create-release.sh  install.sh
src/: ast.rs  csv_adapter.rs  error.rs  main.rs  query.rs  validation.rs
src/adapters/: mod.rs
