[package]
name = "datamorph"
version = "0.1.0"
edition = "2021"
authors = ["Akshay <akshayr3435@gmail.com>"]
description = "Universal data format transformer CLI"
license = "MIT"
repository = "https://github.com/aksaayyy/Datamorph"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
csv = "1.3"
comfy-table = "7.1"
colored = "2.1"
miette = { version = "7.2", features = ["fancy"] }
thiserror = "2.0"
anyhow = "1.0"
indicatif = "0.17"
difflib = "0.4"
jsonschema = "0.18"
url = "2.5"
